# tokens89

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
crates/tokens89-cli/: Cargo.toml
crates/tokens89-cli/completions/: _tokens89  tokens89.bash  tokens89.fish
crates/tokens89-cli/src/: main.rs
crates/tokens89-cli/tests/: commands.rs
crates/tokens89-core/: Cargo.toml
crates/tokens89-core/benches/: corpus.rs
crates/tokens89-core/examples/: fuzz.rs  prepare_fuzz_seeds.rs
crates/tokens89-core/src/: charset.rs  detokenize.rs  error.rs  graphlink.rs  group.rs  lib.rs  number.rs  tifile.rs  token.rs  tokenize.rs
crates/tokens89-core/tests/: corpus_validation.rs  fixture_harness.rs  group_corpus.rs  parallel_corpus.rs  property_based.proptest-regressions  property_based.rs  robustness.rs
docs/: behavior.md  cli.md  file-format.md  install.md  validation.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: charset.rs  corpus_roundtrip.rs  detokenize.rs  graphlink.rs  group.rs  tifile.rs  tokenize.rs
priorDocumentation/: TiFiles.ctl  readme.txt
